<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home_screen"
    tools:context=".SignLoginActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view_main"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circleImageView" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="cursive"
        android:text="@string/flower_shop"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/image_view_main"
        app:layout_constraintStart_toStartOf="@id/image_view_main"
        app:layout_constraintTop_toBottomOf="@id/image_view_main" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/your_name"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text_view_title" />

    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/your_password"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edit_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:fontFamily="cursive"
        android:paddingVertical="15dp"
        android:text="@string/login"
        android:textColor="#ff3f6f"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@id/edit_pass" />


    <TextView
        android:id="@+id/text_view_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/don_t_have_an_account_sign_up"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/text_view_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Forgot Password"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>