<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home_screen"
    tools:context=".SignUpActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view_main"
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:adjustViewBounds="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_view_main"
        app:layout_constraintStart_toStartOf="@id/image_view_main"
        app:layout_constraintEnd_toEndOf="@id/image_view_main"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:fontFamily="cursive"
        android:text="@string/signup"/>

    <TextView
        android:id="@+id/text_view_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_view_title"
        app:layout_constraintStart_toStartOf="@id/text_view_title"
        app:layout_constraintEnd_toEndOf="@id/text_view_title"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:fontFamily="cursive"
        android:text="@string/desc"/>



    <EditText
        android:id="@+id/edit_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_view_desc"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginHorizontal="20dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:hint="@string/your_name"/>
    <EditText
        android:id="@+id/edit_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_1"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginHorizontal="20dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:hint="@string/your_email"/>


    <EditText
        android:id="@+id/edit_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_2"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginHorizontal="20dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"

        android:hint="@string/your_password"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_3"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="15dp"
        android:textSize="25sp"
        android:fontFamily="cursive"
        app:cornerRadius="50dp"
        android:backgroundTint="@color/white"
        android:text="@string/signup"
        android:textColor="#ff3f6f"
        />






</androidx.constraintlayout.widget.ConstraintLayout>